People online implementation and SCSS changes
Added feature where people can see who is online.

--- a/client/intro/chat/Message.html
+++ b/client/intro/chat/Message.html
@@ -1,3 +1,5 @@
 <template name="Message">
-	<p>{{text}}</p>
+	<div class="wrap-message">
+		<p class="chat-message {{#if ownMessage username=owner }}own-message{{/if}}">{{username}}: {{text}}</p>
+	</div>
 </template>
