--- a/client/intro/chat/Chat.html
+++ b/client/intro/chat/Chat.html
@@ -1,5 +1,5 @@
 <template name="Chat">
-	<h3>Chat Room:</h3>
+	<h3><i class="fa fa-comments"></i> Chat Room:</h3>
 	<div class="wrap-messages">
 		{{#each messages}}
 			{{> Message}}
@@ -7,7 +7,7 @@
 	</div>
 	{{#if currentUser}}
 		<form class="new-message">
-			<input type="text" name="text" placeholder="Type and hit enter to send a message!">
+			<input type="text" name="text" placeholder="Type and press enter to send a message!">
 		</form>
 	{{/if}}
 </template>
