--- a/client/intro/peopleOnline/User.html
+++ b/client/intro/peopleOnline/User.html
@@ -5,7 +5,7 @@
 	<div class="wrap-user-online">
 		<p class="user-online">{{username}}</p>
 	</div>
-	<div class="wrap-play">
+	<div id="{{_id}}" class="wrap-play">
 		<p class="play">Play</p>
 	</div>
 </template>
