--- a/client/game/Game.html
+++ b/client/game/Game.html
@@ -1,17 +1,4 @@
 <template name="Game">
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
-	<h1>Hellooooooo</h1>
+	<h2>Hellooooooo</h2>
+	{{> Board}}
 </template>
