Moving pieces working
Pieces on the board are moving now

--- a/client/game/Board.html
+++ b/client/game/Board.html
@@ -1,5 +1,6 @@
 <template name="Board">
-	<svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="svgStage" width="640px" height="640px" onload="init( evt );">
+	<svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="svgStage" width="640px" height="640px" 
+	onload="init( evt );">
 
 		<!-- Make the background -> 900x600 -->
 		
