Fixing moving pieces

--- a/client/game/GameInfo.html
+++ b/client/game/GameInfo.html
@@ -9,9 +9,12 @@
 		</div>
 		
 		<h3><i class="fa fa-trophy" aria-hidden="true"></i> Scores</h3>
+		<div class="wrap-game-scores">
+			<p></p>
+		</div>
 
 		<h3><i class="fa fa-comments"></i> Chat</h3>
-		<div class="wrap-messages">
+		<div class="wrap-messages game-messages">
 			
 		</div>
 		{{#if currentUser}}
