Game Information Section
Added Scores to that section

--- a/client/game/GameInfo.html
+++ b/client/game/GameInfo.html
@@ -10,7 +10,8 @@
 		
 		<h3><i class="fa fa-trophy" aria-hidden="true"></i> Scores</h3>
 		<div class="wrap-game-scores">
-			<p></p>
+			<p><i class="fa fa-circle red-piece" aria-hidden="true"></i> 0 pieces</p>
+			<p><i class="fa fa-circle green-piece" aria-hidden="true"></i> 0 pieces</p>
 		</div>
 
 		<h3><i class="fa fa-comments"></i> Chat</h3>
@@ -19,7 +20,7 @@
 		</div>
 		{{#if currentUser}}
 			<form class="new-message">
-				<input type="text" name="text" placeholder="Type and press enter to send a message!">
+				<input type="text" name="text" placeholder="Type and press enter to send a message to your opponent!">
 			</form>
 		{{/if}}
 	</div>
