--- a/client/game/Game.html
+++ b/client/game/Game.html
@@ -1,4 +1,9 @@
 <template name="Game">
-	{{> Board}}
-	{{> GameInfo}}
+	<svg xmlns="http://www.w3.org/2000/svg" version="1.1" id="svgStage" width="640px" height="640px" 
+  onload="init( evt );"></svg>
+  {{#if Template.subscriptionsReady}}
+    {{GameSetup}}
+  {{/if}}
+  {{> GameInfo}}
+
 </template>
