Refactoring code and inserting more game logic

--- a/client/intro/Intro.html
+++ b/client/intro/Intro.html
@@ -2,7 +2,7 @@
 	<div class="wrap-intro">
 		{{#if isChallenged}}
 			<div class="challenge">
-				<p><strong>{{isChallenged}}</strong> has challenged you for a game!</p>
+				<p><strong>{{challenger}}</strong> has challenged you for a game!</p>
 				<div class="wrap-btn-accept-deny">
 					<span class="deny">Deny</span>
 					<span class="accept">Accept</span>
